--- a/templates/etc/kubernetes/node/kubelet.erb
+++ b/templates/etc/kubernetes/node/kubelet.erb
@@ -11,7 +11,7 @@ KUBELET_PORT="--port=<%= scope['kubernetes::node::kubelet::kubelet_port'] %>"
 KUBELET_HOSTNAME="<% if @kubelet_hostname_override -%>--hostname-override=<%= scope['kubernetes::node::kubelet::kubelet_hostname_override'] %><% end -%>"
 
 # location of the api-server
-KUBELET_API_SERVER="<% if @kubelet_api_servers -%>--api-servers=<%= Array(scope['kubernetes::node::kubelet::kubelet_api_servers']).join(',') %><% end -%>"
+KUBELET_API_SERVERS="<% if @kubelet_api_servers -%>--api-servers=<%= Array(scope['kubernetes::node::kubelet::kubelet_api_servers']).join(',') %><% end -%>"
 
 
 KUBELET_ARGS="<% -%>
